# masters_project

./: .gitignore  LICENSE  README.md  lambda_h.ipynb  pyproject.toml  testing_notebook.ipynb
demos/: unit_cube_dir1.py  unit_cube_dir2.py
demos_coupling/: 0D_coupling.py  coupling1way.py  different_mech_mesh.py
demos_ep/: niederer.py  profile_output.prof  profile_output_jit.prof
demos_ep/activation_times_data/h=0.1,dt=0.01/Lagrange1/: line.txt  points.txt
demos_ep/activation_times_data/h=0.1,dt=0.05/DG0/: line.txt  points.txt
demos_ep/activation_times_data/h=0.1,dt=0.05/Lagrange1/: line.txt  points.txt
demos_ep/activation_times_data/h=0.1,dt=0.05/Lagrange2/: line.txt  points.txt
demos_ep/activation_times_data/h=0.1,dt=0.05/Q1/: line.txt  points.txt
demos_ep/activation_times_data/h=0.2,dt=0.005/Lagrange1_parallell/: line.txt  points.txt
demos_ep/activation_times_data/h=0.2,dt=0.01/Lagrange1_parallell/: line.txt  points.txt
demos_ep/activation_times_data/h=0.2,dt=0.05/DG0/: line.txt  points.txt
demos_ep/activation_times_data/h=0.2,dt=0.05/DG1/: line.txt  points.txt
demos_mech/: convergence.py  interpolation_mwe.py  mech_convergence.py  time_varying_transient.py  unit_cube_dir1.py  unit_cube_dir2.py
demos_monolithic/: EP_monolithic.py  external_operator.py  handoutcode.py
odes/: ORdmm_Land.ode  fitzhughnagumo.ode  fitzhughnagumo.py  land.ode  land.py  simple.ode  simple.py  tentusscher_land_1way.ode  tentusscher_panfilov_2006_epi_cell.py
src/: coupled_model.py  hyperelasticity.py  monodomain.py  utils.py
src/nmcemfem/: coupled_model.py  hyperelasticity.py  monodomain.py  utils.py
src/odes/: tentusscher_land_1way.py
(+47 files in other folders)
